# Java-Examples

./: .gitignore  README.md
FinalExamGenerator/: pom.xml
Unit-01/ArraysPlusClasses/: ArraysOfObjects.java  FindTheTopStudent.java  GridWorld.java  ProcessingArraysOfObjects.java  SortStudents.java
Unit-01/TwoDimensionalArrays/: FindMaxValueAndPosition.java  MultiplicationTable.java  NeighborCount.java  SummingRowsAndColumns.java  TwoDimensional.java  TwoDimensionalPlusLoop.java  TwoDimensionalPlusLoopPretty.java  VariableSizedRows.java
Unit-02/Classes/: ClassAsContainerForMain.java  ClassesHaveBehavior.java  ClassesHoldData.java  ClassesWithConstructors.java  Encapsulation.java
Unit-02/Collections/: CollectionBasics.java  CollectionHierarchy.java  IndexingArrayLists.java  IteratingThroughCollections.java  QueueAndDequeue.java  RemovingWhileIterating.java  Sorting.java  SortingWithComparator.java  UsingMaps.java  WorkingWithSets.java
Unit-02/Strings/: ComparingStrings.java  CreatingAndPrintingStrings.java  ExtractingSubstrings.java  IteratingOverAString.java  MutableStringBuilding.java  NaiveStringBuild.java  ParsingStringsIntoNumbers.java  SearchingInString.java  StringLengthAndIndexing.java  TrimmingAndCaseTransformation.java
Unit-03/Exceptions/: P01_Unhandled.java  P02_TryCatch.java  P03_Finally.java  P04_MultipleCatch.java  P05_ThrowsDeclaration.java  P06_Throw.java  P07_CustomException.java  P08_Rethrow.java  P09_WrapAndRethrow.java  P10_ReportAndExit.java  P11_HandleButLeak.java  P12_FinallyCloses.java  P13_TryWithResources.java
Unit-03/Files/: P01_FileExists.java  P02_CreateFile.java  P03_OpenFileInputStream.java  P04_CatFile.java  P05_AppendToFile.java  P06_OverwriteFile.java  P07_DeleteFile.java  P08_RewriteFileWithChanges.java  P09_ReadAllAtOnce.java  P10_BinaryWriteRead.java  P11_BinarySeekAndPatch.java  P12_CsvModifySimple.java
Unit-03/Memory-and-API/: Debug.java  P01_Primitives.java  P02_Objects.java  P03_PassPrimitive.java  (+10 more)
Unit-07/: INTRO.md
Unit-08/: Bomberman.java  ChatClient.java  HexagonGame.java  HexagonGameServer.java  README.md  SquarePlotterAdvanced.java
Unit-08/Synthesizer/HexSynth/: CMakeLists.txt  README.md
Unit-08/Synthesizer/HexSynth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+1269 files in other folders)
